--- a/index.html
+++ b/index.html
@@ -1030,7 +1030,7 @@
                     </div>
                     <div class="testimonial-author">
                         <div class="author-avatar storylob-img-shadow">
-                            <img src="storylob-7.png" alt="Avatar">
+                            <img src="storylob-testimonial-1.png" alt="Avatar">
                         </div>
                         <div class="author-info">
                             <h4>Sarah Johnson</h4>
@@ -1045,7 +1045,7 @@
                     </div>
                     <div class="testimonial-author">
                         <div class="author-avatar storylob-img-shadow">
-                            <img src="/api/placeholder/60/60" alt="Avatar">
+                            <img src="storylob-testimonial-2.png" alt="Avatar">
                         </div>
                         <div class="author-info">
                             <h4>Michael Chen</h4>
@@ -1060,7 +1060,7 @@
                     </div>
                     <div class="testimonial-author">
                         <div class="author-avatar storylob-img-shadow">
-                            <img src="/api/placeholder/60/60" alt="Avatar">
+                            <img src="storylob-testimonial-3.png" alt="Avatar">
                         </div>
                         <div class="author-info">
                             <h4>Elena Rodriguez</h4>
