--- a/index.html
+++ b/index.html
@@ -890,8 +890,7 @@
     <header>
         <div class="container header-container">
             <div class="logo">
-                <img src="storylob-logoname.png" alt="StoryLob Logo">
-                <span class="logo-text">StoryLob</span>
+                <img class="logo-text" src="storylob-logoname.png" alt="StoryLob Logo">
             </div>
             
             <nav>
