--- a/index.html
+++ b/index.html
@@ -890,7 +890,8 @@
     <header>
         <div class="container header-container">
             <div class="logo">
-                <img class="logo-text" src="storylob-logoname.png" alt="StoryLob Logo">
+                <img class="logo-text" src="storylob-logoonly.png" alt="StoryLob Logo">
+                <span class="logo-text" >StoryLob</span>
             </div>
             
             <nav>
