--- a/index.html
+++ b/index.html
@@ -1072,7 +1072,7 @@
         </div>
     </section>
 
-    <!-- Pricing Section -->
+    <!-- Pricing Section # Commented Out...
     <section id="pricing" class="pricing">
         <div class="container">
             <div class="section-header">
@@ -1140,7 +1140,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> # Commented Out -->
 
     <!-- CTA Section -->
     <section id="features" class="features">
