--- a/index.html
+++ b/index.html
@@ -899,7 +899,7 @@
                     <li><a href="#features">Features</a></li>
                     <li><a href="#how-it-works">How It Works</a></li>
                     <li><a href="#use-cases">Use Cases</a></li>
-                    <li><a href="#pricing">Pricing</a></li>
+       <!--         <li><a href="#pricing">Pricing</a></li>               -->
                     <li><a href="#testimonials">Testimonials</a></li>
                 </ul>
             </nav>
