--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -905,7 +904,7 @@
             </nav>
             
             <div class="header-buttons">
-                <a href="#" class="btn btn-secondary">Log In</a>
+                <a href="https://app.storylob.com/login" class="btn btn-secondary">Log In</a>
                 <a href="#" class="btn btn-primary">Start Free Trial</a>
             </div>
         </div>
