--- a/index.html
+++ b/index.html
@@ -1293,11 +1293,11 @@
             </div>
             
             <div class="footer-bottom">
-                <div class="copyright">© 2025 StoryLob. All rights reserved.</div>
+                <div class="copyright">© 2025 Acceltra All rights reserved.</div>
                 <div class="footer-bottom-links">
-                    <a href="#">Privacy Policy</a>
-                    <a href="#">Terms of Service</a>
-                    <a href="#">Cookie Policy</a>
+                    <a href="https://www.acceltra.de/privacy">Privacy Policy</a>
+                    <a href="https://www.acceltra.de/tos">Terms of Service</a>
+                    <a href="https://www.acceltra.de/impressum">Imprint</a>
                 </div>
             </div>
         </div>
